refactor: FileTargetType 변경